简历基础组件构建

--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -1,5 +1,5 @@
-.header{
-  width: 100%;
-  min-height: 100px;
-  background: peru;
-}
+// .header{
+//   width: 100%;
+//   min-height: 100px;
+//   background: peru;
+// }
