--- a/src/components/app.less
+++ b/src/components/app.less
@@ -5,7 +5,7 @@
   height: 100%;
   margin: 0 auto;
   //padding: 10px;
-  text-align: center;
+  // text-align: center;
   display: flex;
   border: 1px solid peru;
 
@@ -21,5 +21,6 @@
     flex: 1;
     border: 1px solid chartreuse;
     height: 100%;
+    padding: 50px 10px;
   }
 }
